--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,2 @@
-<div class="po-wrapper">
-  <po-toolbar p-title="AppName"></po-toolbar>
-
-  <po-menu [p-menus]="menus"></po-menu>
-
-  <po-page-default p-title="AppName">
-    <p> AppName page </p>
-  </po-page-default>
-</div>
+<app-menu></app-menu>
+<router-outlet></router-outlet>
